--- a/Aula 3/Forms-post/index.html
+++ b/Aula 3/Forms-post/index.html
@@ -6,7 +6,7 @@
     <title>Aula 3</title>
 </head>
 <body>
-    <form action="https://www.barbiefilme.com.br/" method="POST">
+    <form action="https://www.barbiefilme.com.br/" target="blank" method="POST">
         <div>
           <label for="say">What greeting do you want to say?</label>
           <input name="say" id="say" value="Hi" />
